--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
   .a{
-    color: black;
     text-decoration: none;
+    color : black;
   }
   #page{
-    color: red;
+    text-decoration: underline;
   }
   body{
     margin: 0;
